--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">X</a>
+        <span class="home">Home</span>
         <span class="furn">Furniture</span>
         <span class="kit">Kitchen</span>
         <span class="misc">Misc</span>
+        <div class="decor">
+            <img class="image" src="logo.png">
+        </div>
     </div>
 
     <div class="header">
@@ -25,8 +29,13 @@
         </div>
     </div>
     <div class="container">
-
-        <div class="cover"></div>
+        <div class="cover">
+            <div class="slides">
+                <div class="slide1">slide1</div>
+                <div class="slide2">slide2</div>
+                <div class="slide3">slide3</div>
+            </div>
+        </div>
     </div>
 
 <script>
