--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <div class="container">
         <div class="cover">
             <div class="slides">
-                <div class="slide1">slide1</div>
-                <div class="slide2">slide2</div>
-                <div class="slide3">slide3</div>
+                <div class="slide1"></div>
+                <div class="slide2"></div>
+                <div class="slide3"></div>
             </div>
         </div>
     </div>
