new script updates and css

--- a/index.html
+++ b/index.html
@@ -28,15 +28,90 @@
             <button class="openbtn" onclick="openNav()"><img src="logo.png" alt="logo" style="width: 3rem; height: 5.5rem;"></button>
         </div>
     </div>
-    <div class="container">
-        <div class="cover">
-            <div class="slides">
-                <div class="slide1"></div>
-                <div class="slide2"></div>
-                <div class="slide3"></div>
+    <div class="container"></div>
+    <div id="slideshow-cover" data-component="slideshow">
+        <div role="list">
+            <div class="slide">
+                <img class="jpg" src="slideshow/1.jpg">
+            </div>
+            <div class="slide">
+                <img class="jpg" src="slideshow/2.jpg">
+            </div>
+            <div class="slide">
+                <img class="jpg" src="slideshow/3.jpg">
+            </div>
+            <div class="slide">
+                <img class="jpg" src="slideshow/4.jpg">
+            </div>
+            <div class="slide">
+                <img class="jpg" src="slideshow/5.jpg">
+            </div>
+            <div class="slide">
+                <img class="jpg" src="slideshow/6.jpg">
             </div>
         </div>
+        </div>
+        <div id="slideshow-cover2" data-component="slideshow2">
+            <div role="list">
+                <div class="slide">
+                    <img class="jpg" src="slideshow/2.jpg">
+                </div>
+                <div class="slide">
+                    <img class="jpg" src="slideshow/3.jpg">
+                </div>
+                <div class="slide">
+                    <img class="jpg" src="slideshow/4.jpg">
+                </div>
+                <div class="slide">
+                    <img class="jpg" src="slideshow/5.jpg">
+                </div>
+                <div class="slide">
+                    <img class="jpg" src="slideshow/6.jpg">
+                </div>
+                <div class="slide">
+                    <img class="jpg" src="slideshow/1.jpg">
+                </div>
+            </div>
+            </div>
+            <div id="slideshow-cover3" data-component="slideshow3">
+                <div role="list">
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/3.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/4.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/5.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/6.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/1.jpg">
+                    </div>
+                    <div class="slide">
+                        <img class="jpg" src="slideshow/2.jpg">
+                    </div>
+                </div>
+                </div>
     </div>
+    <div class="caption">
+        <span>NSFW:</span>
+        <span>2021:</span>
+        <span>NEW:</span>
+        <span>NSFW:</span>
+        <span>2021:</span>
+    </div>
+    <div class="sub-caption">
+        <span>THE SEXIEST OBJECTS OF THE SEASON</span>
+        <span>CITY GIRLS, ORAL SEX, WILD TALK</span>
+        <span>HOT NEW SEX STARS OF OUR TIME</span>
+        <span>BEAUTIFUL BRONZE BOMBSHELLS</span>
+        <span>CENSORSHIP, SEX AND CYBERSPACE</span>
+    </div>
+
+
 
 <script>
 function openNav() {
