--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="container"></div>
     <div class="cover" id="div-cover">
         <div class="caption">
-            <span>NSFW: SEXIEST OBJECTS OF THE SEASON</span>
+            <span>NSFW: THE SEXIEST OBJECTS OF THE YEAR</span>
             <span>2021: CITY GIRLS, ORAL SEX, & WILD TALK</span>
-            <span>NEW: BEAUTIFUL BRONZE BOMBSHELLS</span>
-            <span>NSFW: SEXY & NEW STARS OF OUR TIME</span>
+            <span>NSFW: NEW AND SEXY STARS OF OUR TIME</span>
             <span>2021: CENSORSHIP, SEX, & CYBERSPACE</span>
+            <span>NSFW: BEAUTIFUL, BRONZE, BOMBSHELLS</span>
         </div>
 
         <div id="slideshow-cover" data-component="slideshow">
